{
    "name": "InputMap",
    "maps": [
        {
            "name": "CharacterControls",
            "id": "e55c5bde-0eda-4408-8f85-f15cde7656ae",
            "actions": [
                {
                    "name": "Movements",
                    "type": "Button",
                    "id": "199c4cb1-e463-4272-bd15-b3c2a5041a40",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "364a2d9e-e640-4399-b576-f9af6893d587",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom Camera",
                    "type": "Value",
                    "id": "903bb619-39f0-48fc-a3ae-d4d2cf839c66",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pickup",
                    "type": "Button",
                    "id": "b312c2f0-3519-47cc-a6ba-0b94cbaf0b83",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "a853cac7-4b32-43ba-bbbf-4d712c9d06be",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "bf98d498-0caa-4f88-9f1b-60ea5209919b",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Movements",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee98d194-6a0a-4859-b9ca-e358023ed41f",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9e554808-3215-4be4-ba68-46bc3b3da480",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Zoom Camera",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25c07e52-12d4-485a-9407-63d0675f689e",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "829299c5-9634-485d-a67e-b9d053be1bf2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Pickup",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "GameplayMenus",
            "id": "ea0b755a-bbf3-44d5-b638-bb2ffb120b5d",
            "actions": [
                {
                    "name": "Close All Menus",
                    "type": "Button",
                    "id": "3c9ff53b-abff-474f-8978-ab19d008d999",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Open Inventory",
                    "type": "Button",
                    "id": "11f909ad-af5f-4289-9123-e3bf2a57c69e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Open Character Panel",
                    "type": "Button",
                    "id": "dd29ca27-dbbd-4e28-9a9b-a74178c24f79",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Open Crafting Menu",
                    "type": "Button",
                    "id": "30cf5245-9f1a-4624-8d51-1f70b6c38558",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Open Build Menu",
                    "type": "Button",
                    "id": "0054a390-db32-4213-b691-10526f1a97bb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Open Help Menu",
                    "type": "Button",
                    "id": "3078781a-9c8f-49f8-9379-252ec39363bc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Open Pause Menu",
                    "type": "Button",
                    "id": "dcf37114-5fe8-4a7d-ad74-0e56c8f9839d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Open Note Book",
                    "type": "Button",
                    "id": "a3b59eef-8dae-4b50-b85f-43b1306f3ecc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "29ebcdec-880c-45f0-962a-ed65ce685971",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Close All Menus",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6d401d6b-b35b-4279-b455-0aeab7029cf6",
                    "path": "<Keyboard>/i",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Open Inventory",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "262e0a90-8472-4fbb-a9a0-15d213f255ca",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Open Character Panel",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bc43228a-7bed-452e-89d7-27c5d4b5f139",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Open Crafting Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f537512f-fa8e-410b-8acc-ed5bdc0d6ab6",
                    "path": "<Keyboard>/b",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Open Build Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "dc767295-f58d-41c3-89ad-ea10ca690ea1",
                    "path": "<Keyboard>/h",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Open Help Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6a296228-f82d-4278-8584-7bb20979e8ca",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Open Pause Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b9319185-b467-4255-b2f0-76bd34789829",
                    "path": "<Keyboard>/n",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Open Note Book",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "SystemMenus",
            "id": "96b8b93d-0c59-407e-b167-af9cad8e6792",
            "actions": [
                {
                    "name": "Close Pause Menu",
                    "type": "Button",
                    "id": "10ed0b81-2a2f-4527-aca3-5c159b37a31a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "15c23046-80c6-4a91-807c-84379db2e7e3",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "Mouse and Keyboard",
                    "action": "Close Pause Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Dialogues",
            "id": "d4484669-ab58-4396-9000-f6ebb7a206cb",
            "actions": [
                {
                    "name": "Skip Dialog",
                    "type": "Button",
                    "id": "6bebee07-61d2-4781-862e-bfbce6a3bef6",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "42f3015e-f612-4b15-b89d-560b5992c28a",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Skip Dialog",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Mouse and Keyboard",
            "bindingGroup": "Mouse and Keyboard",
            "devices": [
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}